--- a/defs.tex
+++ b/defs.tex
@@ -56,8 +56,8 @@
 \hyphenation{te-ra-hertz}
 \hyphenation{ho-mo-ge-ne-ous}
 \hyphenation{si-mu-la-ti-on}
-\hyphenation{}
-\hyphenation{}
+\hyphenation{wa-ve-num-ber}
+\hyphenation{wa-ve-vec-tor}
 
 
 \clubpenalty=1000
