--- a/theory.tex
+++ b/theory.tex
@@ -1091,7 +1091,7 @@ Embedding one layer different from the others, a \textit{defect}, into the middl
 The success in prohibiting the light to propagate along one direction inspired the design of two- and three-dimensional \textit{photonic crystals}\index{photonic crystal!history}, named in analogy with the band gaps for the electron wave in natural crystals \cite{joannopoulos2011photonic}. A nontrivial accomplishment of manufacturing the first three-dimensional structure with a delimited range of frequencies for which there exists no propagating wave in any direction, a \textit{complete band gap}\index{band gap!complete}, is attributed to Yablonovitch \cite{yablonovitch1987} in 1987.
 %% phc term first used in ??
 
-The structure, known as \textit{yablonovite}\index{yablonovite}, was designed for microwaves, since it was made by precise mechanical drilling into a plastic cube. Different technologies were developed in 1990s in attempts to fabricate photonic crystals operating  efficiently in the optical range, e.g. a similar approach based on X-ray nanolitography (see Fig. \ref{fg_phc_patents}a), stacking of structured layers (Fig. \ref{fg_phc_patents}b), direct laser writing in a resin or self-assembly of dielectric spheres into opal-like lattice.
+The structure, known as \textit{yablonovite}\index{yablonovite}, was designed for microwaves, since it was made by precise mechanical drilling into a plastic cube. Different technologies were developed in the 1990s in attempts to fabricate photonic crystals operating  efficiently in the optical range, e.g. a similar approach based on X-ray nanolitography (see Fig. \ref{fg_phc_patents}a), stacking of structured layers (Fig. \ref{fg_phc_patents}b), direct laser writing in a resin or self-assembly of dielectric spheres into opal-like lattice.
 
 The demands for achieving a complete three-dimensional band gap can be reduced when a singly or doubly periodic modulation is etched into an index-guiding dielectric slab, as was developed by Zengerle in the late 1970s \cite{zengerle1987light}. Planar structures are also much easier to fabricate using existing technologies such as photolitography.  
 % "Any dielectric material can be used to fabricate a photonic crystal with a sizeable and robust complete photonic bandgap (CPBG) in three dimensions, as long as small metal inclusions can be added." \cite{moroz2002metallo}
@@ -1122,7 +1122,7 @@ The same mechanism causing the radio wave reflection from the dilute plasma in t
 
 \textit{Negative permeability}\index{permeability!negative} manifests itself similarly to the electrodynamic point of view, but is observed much less often, typically above magnetic resonances, \textit{magnons}\index{magnons!bulk}.
 
-Theoretical investigation of electrodynamics in media with a \textit{negative index of refraction}\index{index of refraction!negative, history of}, or slightly more generally, those with antiparallel group and phase velocities (c.f. Chapter \ref{chap_vfvg}), can be traced back \cite{agranovich2006spatial} to early discussions of anomalous dispersion near resonances by Lamb or in a 1904 book from Schuster \cite{schuster1904introduction, boardman2005negative}. Mandelshtam's lectures on optics illustrated negative refraction of light in 1940s \cite{mandelstam1971lectures} and were further complemented, among others, in 1950s by Sivukhin's discussion of energy concerns \cite{sivukhin1957energy} and Pafomov's notes about reversed \v{C}erenkov radiation \cite{pafomov1956cerenkov}. 
+Theoretical investigation of electrodynamics in media with a \textit{negative index of refraction}\index{index of refraction!negative, history of}, or slightly more generally, those with antiparallel group and phase velocities (c.f. Chapter \ref{chap_vfvg}), can be traced back \cite{agranovich2006spatial} to early discussions of anomalous dispersion near resonances by Lamb or in a 1904 book from Schuster \cite{schuster1904introduction, boardman2005negative}. Mandelshtam's lectures on optics illustrated negative refraction of light in the 1940s \cite{mandelstam1971lectures} and were further complemented, among others, in 1950s by Sivukhin's discussion of energy concerns \cite{sivukhin1957energy} and Pafomov's notes about reversed \v{C}erenkov radiation \cite{pafomov1956cerenkov}. 
 
 It was Veselago's review of the negative-index homogeneous media from 1968 that received later significantly wider attention in the literature \cite{veselago1968}. Veselago used % is he first?
 the term of \textit{left-handed media}\index{media!left-handed} and speculated to what extent they might exist in the nature, but he did not discuss the way of realizing such media, nor the more general theory of the spatial dispersion which may also lead to natural negative refraction.
@@ -1184,13 +1184,13 @@ The \textit{electromagnetic cloak}\index{electromagnetic cloak} is a hollow stru
 The curved path used to evade the obstacle is always longer than a line segment, however, so typically a medium with continuously varying $\Neff\in \langle0,1\rangle$ must be properly designed by transformation-optics calculations \cite{eleftheriades2012transforming}.
 %todo \cite{alitalo2009electromagnetic}
 Electromagnetic cloaking % by homogeneous media ???
-was considered in the early 1960s by Dollin \cite{dollin1961possibility} and later by Kerker \cite{kerker1975invisible}.
+was considered in 1961 by Dollin \cite{dollin1961possibility} and later by Kerker \cite{kerker1975invisible}.
 
 The concept of cloaking was realized \cite{schurig2006metamaterial} in 2006 using a microwave metamaterial, and followed by many others.
 All reported electromagnetic cloaks based on $N<1$ media are inevitably dispersive, which limits their band width; they are also usually polarisation sensitive. The presence of any macroscopic cloak made of known materials is also revealed by its losses, at least at the infrared or optical frequencies. Obviously a great conceptual breakthrough would be needed to overcome these issues. 
 
 A simplified task is to construct the \textit{carpet cloak}\index{carpet cloak} which conceals the obstacle near a surface \cite{valentine2009optical}.
-The carpet cloak can be built with $N<1$ media as in full-angle cloaks, however it also can be made of virtually loss-less anisotropic dielectrics with quite usual values of parameters \cite{wang2013homogeneous}.
+The carpet cloak can be built with $N<1$ media as in full-angle cloaks, however for a single light polarisation, it can also be made  of virtually loss-less anisotropic dielectrics with quite usual values of parameters \cite{wang2013homogeneous}.
 
 %}}}
 
@@ -1233,7 +1233,7 @@ In all cases of $\eeff(\omega)<1$, the effective refractive index $\Neff(\omega)
 
 %}}}
 \paragraph{Negative effective permeability and negative refractive index}  %{{{ ================== 
-The literature is somewhat ambiguous, but a thorough search shows that the term \textit{metamaterial}\index{metamaterial!history} (MM) was first used on conference by Walser in 1999. Although apparently redundant to \textit{artificial dielectrics}, which was used for decades before\footnote{An interesting search into the terminology usage by means of the \textit{Google Books Ngram Viewer} shows that the notion of  \textit{artificial dielectrics} has been the most used in the 1950 and early 1960, and then it levelled off at a low frequency, which was greatly exceeded by the usage of \textit{metamaterial} in early 2000s. Simultaneously, the usage of \textit{photonic crystal} has rose an order of magnitude higher.},  the new term of \textit{metamaterial} can be viewed as more fortunate as it does not imply whether the structure is man made or not, nor whether its effective parameters mimic a dielectric or, e.g., a metal.
+The literature is somewhat ambiguous, but a thorough search shows that the term \textit{metamaterial}\index{metamaterial!history} (MM) was first used on conference by Walser in 1999. Although apparently redundant to \textit{artificial dielectrics}, which was used for decades before\footnote{An interesting search into the terminology usage by means of the \textit{Google Books Ngram Viewer} shows that the notion of  \textit{artificial dielectrics} has been the most used in the 1950s and early 1960s, and then its usage declined, to be greatly exceeded by the usage of \textit{metamaterial} in early 2000s. Simultaneously, the usage of \textit{photonic crystal} has rose an order of magnitude higher.},  the new term of \textit{metamaterial} can be viewed as more fortunate as it does not imply whether the structure is man made or not, nor whether its effective parameters mimic a dielectric or, e.g., a metal.
 
 It remains unclear whether there was an objective cause, or a semantic bias from the term \textit{artificial dielectrics} only, that the periodic structures with magnetic effects received less attention than those with electric ones. Apparently the first theoretical studies thereof by Lewin \cite{lewin1947electrical} and Schelkunoff \cite{schelkunoff1952antennas} date back to the 1940s, but the first realisations of split-ring resonator arrays and other magnetically resonant structures seem to have been published no earlier than in the 1980s. Further details can be found in the Results chapter on pp. \pageref{negn_srr} and \pageref{negn_diel}.
 
