--- a/expe.tex
+++ b/expe.tex
@@ -11,7 +11,7 @@ The reflectance could not be directly measured in the setup described, but at th
 In the following, we give details on the optical and terahertz experimental setup.
 %}}}
 \paragraph{Terahertz pulse generation}%{{{
-As the source of ultrashort optical pulses, we used the commercial \textit{Coherent Mira} titanium-sapphire femtosecond oscillator with a mean power of 0.5 W, central wavelength 810 nm, repetition rate of 76 MHz and a pulse duration not exceeding 70 fs.  
+As the source of ultrashort optical pulses, we used the commercial \textit{Coherent Mira} titanium-sapphire femtosecond oscillator with a mean power of 0.5 W, central wavelength 810 nm, repetition rate of 76 MHz and pulse duration not exceeding 70 fs.  
 % \cite{pashkin2004phd} In our TDTS measurements femtosecond laser ”Mira Seed” by COHERENT has been used for generation of ultrashort light pulses with following characteristics:
 	%pulse length			50 - 80 fs
 	%spectral bandwidth		15 - 40 nm	
@@ -20,7 +20,7 @@ As the source of ultrashort optical pulses, we used the commercial \textit{Coher
 	%average power			650 mW
 	%pulse peak power		140 kW    	
 
-The laser output was split into two branches at the beamsplitter (BS1 in Fig. \ref{fg_exp}), one of which was used for the electrooptical sampling setup. The major part of the energy passing through BS1 was converted to terahertz pulses using an interdigitated photoconductive emitter from TeraSED, whose principle of operation is described in the previous section. 
+The laser output was split into two branches at the beamsplitter (BS1 in Fig. \ref{fg_exp}), one of which was used for the electrooptical sampling setup. The major part of the energy passing through BS1 was converted to terahertz pulses using an \textit{TeraSED} interdigitated photoconductive emitter, described in the previous section. 
 The voltage at the emitter was 15-20 V, and its polarity was modulated at the frequency of 91-92 kHz. This enabled us to use synchronous lock-in detection to increase the signal-to-noise ratio of the detection system. % as described below.
 % TODO ADD figure of the pulse and the spectrum
 
@@ -30,14 +30,14 @@ The diameter of the active region on the TeraSED emitter was comparable with the
  mirror and refocused at the sample. Upon passing through it, they diffracted again and were collected by an identical ellipsoidal mirror and focused at the detector. 
 To allow enough clearance for a bigger instrumentation surrounding a sample, such as a liquid-helium cryostat or a heating furnace, the ellipsoidal mirrors were separated by 0.3 m and the whole beam path approached 0.6 m. % TODO check with a ruler
 
-Propagation of terahertz waves in air over such a distance is impeded by absorption of water vapour, which is the only polar molecule found in the air in a significant concentration. The absorption forms clear notches in the terahertz transmittance spectra, for instance around 0.62, 0.75, 1.07 and 1.41~THz, which can be traced down to discrete rotational levels of the water molecules \cite{exter1989}. In the time domain, the absorption manifests itself as a exponentially decaying ringdown. %that has polarity opposite to the main THz peak.
+Propagation of terahertz waves in air over such a distance is impeded by absorption of water vapour, which is the only polar molecule found in the air in a significant concentration. The absorption forms clear notches in the terahertz transmittance spectra, for instance around 0.62, 0.75, 1.07 and 1.41~THz, which can be traced down to discrete rotational levels of the water molecules \cite{exter1989}. In the time domain, the absorption manifests itself as an exponentially decaying ringdown. %that has polarity opposite to the main THz peak.
 % TODO figure from my web
 In order to avoid such a signal deformation,
-the whole terahertz wave path has to be in an environment free of water vapour, and the fastest way to reliably achieve this was to enclose the emitter, mirrors, sample and detector in a vacuum chamber evacuated by a two-stage rotary pump. 
+the whole terahertz wave path has to be in an environment free of water vapour, and the fastest way to achieve this reliably was to enclose the emitter, mirrors, sample and detector in a vacuum chamber evacuated by a two-stage rotary pump. 
 
 %}}}
 \paragraph{Terahertz detection setup}%{{{
-\begin{figure}[ht] \caption{Experimental setup for the terahertz time-domain spectroscopy. BS1 is the beam splitter separating the pump and sampling bbranches, F1 a focusing lens, QWP a quarter-wave plate, PBS a pellicle beam splitter.  ZnTe denotes the optoelectric crystal, C is the Babinet compensator, WP is the Wollaston polarizer and are PD1-3 are the photodiodes.} \label{fg_exp} \centering 
+\begin{figure}[ht] \caption{Experimental setup for the terahertz time-domain spectroscopy. BS1 is the beam splitter separating the pump and sampling branches, F1 a focusing lens, QWP a quarter-wave plate, PBS a pellicle beam splitter.  ZnTe denotes the optoelectric crystal, C is the Babinet compensator, WP is the Wollaston polarizer and PD1, PD2 and PD3 are photodiodes.} \label{fg_exp} \centering 
 	\includegraphics[width=\textwidth]{img/exp_THz_sampling.pdf}
 \end{figure}
 
@@ -54,7 +54,7 @@ To reduce the noise, synchronous detection with the \textit{Stanford SRS360} loc
 
 %The time constant of the lock-in acquisition was comparable to the time which was needed by the delay lines to introduce a picosecond delay. As a result, the speed of delay lines movement suppressed the high-frequency components of the detected signal. Attention must be paid at precise control of the delay line speed and software compensation of the artifacts.
 
-The spectral response of both the emitter and electrooptic sampling substantially influenced the measured sample spectra. Moreover, the phase of the recorded waves was modulated too, as a beam passing through a focus acquires additional phase due to the Gouy shift \cite{kuzel2010gouy}. Every transmittance measurement was therefore normalized in frequency domain against a corresponding free-space reference, so that both the amplitude and phase artifacts cancelled out. 
+The spectral response of both the emitter and electrooptic sampling substantially influenced the measured sample spectra. Moreover, the phase of the recorded waves was modulated, too, as a beam passing through a focus acquires additional phase due to the Gouy shift \cite{kuzel2010gouy}. Every transmittance measurement was therefore normalized in frequency domain against a corresponding free-space reference, so that both the amplitude and phase artifacts cancelled out. 
 
 %}}}
 
@@ -96,7 +96,7 @@ However, due to the hyperbolic shape of the gaussian beam, with its Rayleigh len
 \section{Preparation of the titanium dioxide microspheres}
 \paragraph{Fabrication through the spray-dry technique}%{{{
 The collaborating laboratory of Dr. Patrick Mounaix in France %% Todo reference to Patrick's group somehow, and mention Oleg Mitrofanow (here, or later)
-provided us with high-permittivity TiO$_{2}$ spheres with the sizes from 30 to 100 $\upmu$m, which were examined by the terahertz spectroscopy as dielectric resonators, and as possible constituents of a metamaterial with a negative effective permeability.
+provided us with high-permittivity TiO$_{2}$ spheres with the sizes from 30 to 100 $\upmu$m, which were examined by the terahertz spectroscopy as dielectric resonators, and as possible constituents of a metamaterial with negative effective permeability.
 \begin{figure}[ht] \caption{Microphotograph of the TiO$_{2}$ spheres after preliminary sieving} \label{fg_microphoto} \centering 
 \includegraphics[height=5cm]{img/microscope_TiO2_particles.pdf}
 \end{figure}
@@ -106,7 +106,7 @@ Compared to most metamaterial designs, the fabrication of the dielectric spheres
 As a first step, rutile (TiO$_{2}$) was ground to a sub-microscopic powder \cite[pp. 91-93]{yahiaoui2011phd}. A suspension of this powder in ethanol was sprayed into flame. It immediately formed spherical droplets, which dried up and sintered in the hot air. Rutile concentration in the suspension, feed rate and gas flow in the flame determined the average size of the sintered particles.
 
 The resulting particles were annealed in a furnace to further solidify. The degree of recrystallization could be controlled  by the temperature of the furnace from 1200 to 1400 $^{\circ}$C from microscopic grains to few large crystalline domains in one microsphere. Note these temperatures used are still far below the melting temperature of rutile, which exceeds 1800 $^{\circ}$C.
-Similar TiO$_{2}$ microspheres are also available commercially (e.g. from Brace, GmbH), and were likely made with a similar process.
+Similar TiO$_{2}$ microspheres are also available commercially (e.g. from Brace, GmbH), and they were likely made with a similar process.
 
 The annealed spheres were further treated with the aim to break or eliminate clusters, by means of light milling with agathe mortar, which was separated afterwards by ultrasound bath cleaning in ethanol. Pre-sieving was performed on commercial sieves with 100, 53, 50, 40 and 38 $\upmu$m size of the square hole, though these nominal parameters of sieves should be in no way understood as hard limits for the particle sizes. The procedure of milling, cleaning and sieving was repeated 2-3 times, according personal communication with Dr. Patrick Mounaix and {Dr.} U-Chan Chung.
 
@@ -144,7 +144,7 @@ The mesh was woven of nylon threads, so the bottom sieve could easily be stretch
 
 This  property however prove to be also detrimental for precise sieving, as the threads easily bent aside under only a small force, thus allowing oversized particles either to pass or to get stuck permanently and to block the sieve within few minutes. To help resolving the latter problem, two additional narrow glass rings were cut from the glass tube, supporting much coarser sieves with 150 $\upmu$m pitch glued on the bottom, to allow little spherical springs bounce beneath the sieves and to loosen the particles that got stuck in the holes. For the same purpose, 2mm plastic balls were added to the microsphere samples.  
 
-A cover on top prevented the particles to jump out of the above container. The whole stack was carefully lowered into a test tube with a greater diameter, and vibrated by a tiny electric motor glued on the bottom.
+A cover on top prevented the particles to jump out of the above container. The whole stack was carefully lowered into a test tube with a larger diameter, and vibrated by a tiny electric motor glued on the bottom.
 
 \begin{figure} \caption{\textbf{(a)} Photograph and \textbf{(b)} scheme of the first sieving apparatus based on square-lozenge sieve pair, with a schematic out-of-scale illustration of its operation for an input of four different microspheres \textbf{(c)}}  \centering \includegraphics[width=12cm]{img/expe/sieving1.pdf} \label{fg_sieving1} \end{figure} 
 
@@ -179,14 +179,14 @@ This problem could however be slightly mitigated by tilting the apparatus. With 
 %}}}
 \section{Optical determination of microparticle statistics}
 \paragraph{Image preparation} %{{{
-An accurate characterisation of the particle statistics was necessary not only to assess the efficacy of sieving, but also to explain  on a quantitative basis possible differences between the measured terahertz spectra and the computed ones. To obtain reliable statistics, thousands of particles needed to be evaluated, repeatedly for every sample. This, along with the small dimensions of particles, indicated that the most viable way to do so would be the optical microphotography with computer image processing automatically resolving each particle.
+An accurate characterisation of the particle statistics was necessary not only to assess the efficacy of sieving, but also to explain  possible differences between the measured terahertz spectra and the computed ones  on a quantitative basis. To obtain reliable statistics, thousands of particles needed to be evaluated, repeatedly for every sample. This, along with the small dimensions of particles, indicated that the most viable way to do so would be the optical microphotography with computer image processing automatically resolving each particle.
 
 Computer \textit{granulometry}\index{granulometry}, identification and measurement of photographed particles from a digital image,
 is a well-established technique. It is implemented in several advanced image processing programs, of which \textit{ImageJ} was selected \cite{abramoff2004image} since it is free of charge and allows its use for large batches of images through the use of macros. 
 
 The transmission microphotographs were acquired either with the lowest magnification on a laboratory microscope, or with a portable microscopic digital camera on its highest magnification, yielding similar results.
 
-The first processing step, applied at the somewhat blurred photographs, as shown in Fig. \ref{fg_sievingstats}a, was to establish the intermediate brightness level between the image's bright and dark areas, and apply a threshold so that the image was a binary function. Then the \textit{ImageJ}'s \textit{watershed} algorithm was applied to relatively reliably resolve two or more touching particles, and a particle outline was found. An example is depicted as cyan lines in Fig. \ref{fg_sievingstats}b. Finally, the particle outlines were approximated by best matching ellipses, and the major and minor axes of the ellipse were added into the statistics. 
+The first processing step, applied at the somewhat blurred photographs, as shown in Fig. \ref{fg_sievingstats}a, was to establish the intermediate brightness level between the image's bright and dark areas, and apply a threshold so that the image was a binary function. Then the \textit{ImageJ}'s \textit{watershed} algorithm was applied to resolve two or more touching particles relatively reliably, and a particle outline was found. An example is depicted as cyan lines in Fig. \ref{fg_sievingstats}b. Finally, the particle outlines were approximated by best matching ellipses, and the major and minor axes of the ellipse were added into the statistics. 
 \begin{figure}[ht] \caption{\textbf{(a)} A small section of a microphotograph of a pre-sieved sample before applying the described double-sieve method, \textbf{(b)} the corresponding identification of particles in ImageJ} \label{fg_sievingstats} \centering 
 	\begin{overpic}[height=.30\textwidth]{img/technology/imagej_photo.pdf} \put(-9,72) {\textbf{(a)}} \end{overpic}\quad\quad
 	\begin{overpic}[height=.30\textwidth]{img/technology/imagej_found.pdf} \put(-9,72) {\textbf{(b)}} \end{overpic}\quad\quad
@@ -218,8 +218,8 @@ Femtosecond cutting of metallic sheets into two-dimensional meshes is relatively
 compared to the dielectrics, 
 and was implemented in our laboratory. To achieve the required precision, we used 20 or 30 $\upmu$m thick high-quality stainless steel foils. 
 
-The femtosecond laser used was different from that serving as the femtosecond source for terahertz spectroscopy (Sect. \ref{sect_tdts}). A largely sufficient power was provided by the \textit{Spectra Physics Spitfire Ace} multipass titanium-sapphire amplifier, with 1 mJ of energy per impulse, duration of $\sim$50 fs, and 5 kHz repetition rate. Its output beam had to be attenuated to obtain finer cut at the expense of a slightly slower speed. The mechanical part consisted of two crossed \textit{Owis} stepper-motor controlled linear stages, and a fast mechanical shutter allowed us to control the beam with a sufficient resolution of ca. 100 ms. 
-\begin{figure}[ht] \caption{\textbf{(a)} Laser cutting the steel foil with a moving holder for four samples, metal vapour ventilation, and the focusing lens. Bright plasma spot is visible at the focus. \textbf{(b)} The resulting sieves made from 30 $\mu$m stainless steel foil with 10 mm overall diameter.} \label{fg_microfab} \centering 
+The femtosecond laser used was different from that serving as the femtosecond source for terahertz spectroscopy (Sect. \ref{sect_tdts}). A largely sufficient power was provided by the \textit{Spectra Physics Spitfire Ace} multipass titanium-sapphire amplifier, with 1 mJ of energy per impulse, duration of $\sim$50 fs, and 5 kHz repetition rate. Its output beam had to be attenuated to obtain finer cut at the expense of a slightly slower rate. The mechanical part consisted of two crossed \textit{Owis} stepper-motor controlled linear stages, and a fast mechanical shutter allowed us to control the beam with a sufficient resolution of ca. 100 ms. 
+\begin{figure}[ht] \caption{\textbf{(a)} Laser cutting the steel foil with a moving holder for four samples, metal vapour ventilation, and the focusing lens. A bright plasma spot is visible at the focus. \textbf{(b)} The resulting sieves made from 30 $\mu$m stainless steel foil with 10 mm overall diameter.} \label{fg_microfab} \centering 
 	\begin{overpic}[height=.35\textwidth]{img/technology/sieve2_drilling_m.pdf} \put(-8,82) {\textbf{(a)}} \end{overpic}\quad\quad
 	\begin{overpic}[height=.35\textwidth]{img/technology/steel_sieve_on_paper.pdf} \put(-8,80) {\textbf{(b)}} \end{overpic}
 \end{figure}
