--- a/result.tex
+++ b/result.tex
@@ -1,7 +1,7 @@
 \label{chapter_results}
 \section{Dielectric slab} \label{section_Dielectric slab}%{{{
 \paragraph{Dispersion curves of a one-dimensional photonic crystal}%{{{
-One-dimensional photonic crystals (1-D PhC) have been investigated thoroughly in the previous century and they found their major application in dielectric mirrors. This represents the simplest example of periodic structures, exhibiting only a subset of different phenomena that can be observed in other periodic structures. This is due to a continuous translational symmetry in the transverse direction that excludes all phenomena with a lower symmetry. 
+One-dimensional photonic crystals (1-D PhC) were investigated thoroughly in the previous century and they found their major application in dielectric mirrors. This represents the simplest example of periodic structures, exhibiting only a subset of different phenomena that can be observed in other periodic structures. This is due to a continuous translational symmetry in the transverse direction that excludes all phenomena with a lower symmetry. 
 
 Most importantly, no \textit{individual resonances} can occur in a 1-D PhC; all interactions with the waves occur through partial reflections of the electromagnetic waves on the interfaces of the layers. The only type of the band gap observed is of the Bragg type.
 
@@ -13,7 +13,7 @@ The right panel, Fig. \ref{fg_1dbd}b, is obtained by introducing periodic layers
 %}}}
 \begin{figure}[h] %{{{ fg_1dbd
 	\caption[Dispersion curves in free space and in 1-D photonic crystal (PWEM results)]{Dispersion curves \textbf{(a)} in free space with virtual periodicity $a$, \textbf{(b)} in dielectric layers with permittivity $\varepsilon = 12$ and 15 \% filling fraction. \\
-Side plots show the electric field in $2\times 2$ unit cells, with dielectric outlined by thin black lines. The triplet of the electric $\E$ and magnetic $\HH$ fields and the wave vector $\KK$ for the incident wave is indicated in the lower left. The electric field is plotted as a blue-white-red color map.} \label{fg_1dbd} \centering 
+	Side plots show the electric field in $2\times 2$ unit cells, with dielectric outlined by thin black lines. The triplet of the electric $\E$ and magnetic $\HH$ fields and the wave vector $\KK$ for the incident wave is indicated in the lower left. The electric field is plotted as a blue-white-red color map. In the left panel, corresponding to vacuum propagation, the fields acquire pure harmonic shape.} \label{fg_1dbd} \centering 
 	\begin{overpic}[width=.48\textwidth]{img/Slab_eps001_PWEM.pdf}  \put(1,96) {\textbf{(a)}} 
 		\put(0,1){\includegraphics[width=.12\textwidth]{img/tripletKEH.pdf}}
 	\end{overpic}
@@ -102,9 +102,9 @@ Note that with the correct branch retrieval procedure, the index of refraction n
 \paragraph{High-frequency behaviour}%{{{
 The structure consisting of a regular square lattice of conductive wires exhibits more interesting properties when the electric field is parallel to the wires, and this polarisation will be assumed in the following (Fig. \ref{fg_wire_drawing}a). The lattice of wires perpendicular to the electric field does not appreciably interact with the electromagnetic waves, until the wire width is of similar magnitude to their spacing; such a case is discussed in Section \ref{section_eot}.
 
-In the high-frequency part of the spectrum above the first photonic band, where more than a half wavelength fits into the unit cell, the layers of metallic rods can be approximated by thin scattering slabs discussed in the previous section, since the high-frequency interaction of the waves can be described of photonic bands alternating with Bragg band gaps. In contrast with the dielectric PhC described above, no Fabry-Pérot resonances are observed and the scattering strength of the wire layers reduces monotonously with growing frequency.
+In the high-frequency part of the spectrum above the first photonic band, the array of metallic rods in the lattice allows the light to pass through. Each layer scatters a part of the wave in a similar way to that one discussed in the previous section. Thus, the high-frequency interaction of the waves consists of photonic bands alternating with Bragg band gaps. In contrast with the dielectric PhC described above, no Fabry-Pérot resonances are observed and the scattering strength of the wire layers reduces monotonously with growing frequency.
 
-\begin{figure}[ht] \caption[Wire array $|r|$, $|t|$, $\Neff$, $\eeff$ (s-parameter)]{Amplitude of \textbf{(a)}  reflectance, \textbf{(b)} transmittance \textbf{(c)} effective index of refraction $\Neff$ and \textbf{(d)} effective permittivity $\eeff$ for an array of wires made of gold, depending on the wire radius $\rho_w \in \{1, 2, 4, 8, 16\}$ $\mu$m with a fixed unit cell size $a = 100$ $\mu$m. The results were obtained by FDTD simulations with a grid resolution of 1 $\mu$m. } \label{fg_Slab_fillfraction015_wireradius_scan} \centering \vspace{-3mm}
+\begin{figure}[ht] \caption[Wire array $|r|$, $|t|$, $\Neff$, $\eeff$ (s-parameter)]{Amplitude of \textbf{(a)}  reflectance, \textbf{(b)} transmittance \textbf{(c)} effective index of refraction $\Neff$ and \textbf{(d)} effective permittivity $\eeff$ for an array of wires made of gold, depending on the wire radius $\rho_w \in \{1, 2, 4, 8, 16\}$ $\mu$m with a fixed unit cell size $a = 100$ $\mu$m. The results were obtained by FDTD simulations with a grid resolution of 1 $\mu$m. The results for the effective permittivity have no physical value above the first band gap,  in the right half of the plots.} \label{fg_Slab_fillfraction015_wireradius_scan} \centering \vspace{-3mm}
 \begin{tabular}{r}
 \begin{overpic}[width=0.85\textwidth]{img-meep/Wires_wireradiusscan_r.pdf} \put (-1,28) {\textbf{(a)}} \end{overpic}\vspace{-0.061\textwidth}\\ 
 \begin{overpic}[width=0.85\textwidth]{img-meep/Wires_wireradiusscan_t.pdf} \put (-1,28) {\textbf{(b)}} \end{overpic}\vspace{-0.056\textwidth}\\
@@ -125,7 +125,7 @@ In the high-frequency part of the spectrum above the first photonic band, where 
 \paragraph{Inductive behaviour at low frequencies}%{{{
 At low frequencies, in contrast, the interaction of the conductive wires with the electromagnetic wave becomes very strong and leads to a behaviour completely different from that described above. For a frequency range from zero up to the \textit{effective plasma frequency}\index{frequency!effective plasma f.} $f_p$, the array exhibits a band gap where $\Neff$ is pure imaginary. Therefore, in the low-frequency part of the spectrum, the local effective permittivity $\eeff$ is a physically meaningful quantity and it follows the law typical for inductive media:
 \begin{equation} \eeff(f) = 1 - \frac{f^{2}}{f_p^{2}}\label{eq_eeff_plasma}\end{equation}
-Such a dependence of $\epsrl$ was already used in the Drude model in Eq. (\ref{eq_drude_eps}), and plotted in Fig. \ref{fg_Au_models}. Owing to this similarity to metals or plasma, wire arrays are denoted also as \textit{diluted metal}\index{diluted metal} or \textit{artificial plasma}\index{artificial plasma} since 1950s \cite{merkel1973simulation, rotman1962plasma}, or as \textit{metallic delay dielectrics}\index{metallic delay dielectrics}, owing to the possibility to manipulate the phase and group velocities  \cite[p. 54]{brown1953artificial}.
+Such a dependence of $\epsrl$ was already used in the Drude model in Eq. (\ref{eq_drude_eps}), and plotted in Fig. \ref{fg_Au_models}. Owing to this similarity to metals or plasma, wire arrays are denoted also as \textit{diluted metal}\index{diluted metal} or \textit{artificial plasma}\index{artificial plasma} since the 1950s \cite{merkel1973simulation, rotman1962plasma}, or as \textit{metallic delay dielectrics}\index{metallic delay dielectrics}, owing to the possibility to manipulate the phase and group velocities  \cite[p. 54]{brown1953artificial}.
 
 The physical origin of $\eeff<0$ is different from that in homogeneous metals or plasmas, where it is of \textit{kinetic} origin, i.e., due to the effective mass of electrons \cite{marques2011bulk}. In contrast, the negative effective permittivity in wire arrays is the result of the \textit{self inductance}\index{self inductance of wire} due to the magnetic field circulating around the conductor. As a result, except for optical frequencies, $f_p$ does not substantially depend on the internal plasma frequency of the constituent metal, and the above described behaviour can be obtained even if the wires are thought to be made of a perfect electric conductor (PEC).
 The effective plasma frequency $f_p$ does, however, depend on the geometry described by two parameters, the wire radius $\rho_w$ and the unit cell size $a$. 
@@ -153,14 +153,14 @@ Notice that for a single cell, the transition from negative to positive permitti
 \begin{overpic}[width=\textwidth]{img/EWire_plasmaF_radiusscan.pdf}  \put (-1,58) {\textbf{(b)}} \end{overpic}\\
   \end{minipage}
   \begin{minipage}[c]{0.3\textwidth}
-	  \caption[Comparison of numerical results and analytical models for plasma frequency $f_p$ of a wire medium]{Comparison of numerical results (dots) and two analytical models (solid and dotted lines) for plasma frequency $f_p$ of a wire medium: \textbf{(a)} $f_p$ as a function of wire spacing for two different wire radii of 16 $\mu$m and 8 $\mu$m (red and blue curves/dots, respectively). The empty symbols correspond to a significantly reduced FDTD resolution, added for comparison. \textbf{(b)} $f_p$ as a function of wire radius $\rho_w$. }\vfill \label{fg_omegap_a}
+	  \caption[Comparison of numerical results and analytical models for plasma frequency $f_p$ of a wire medium]{Comparison of numerical results (dots) and two analytical models (solid and dotted lines) for plasma frequency $f_p$ of a wire medium: \textbf{(a)} $f_p$ as a function of wire spacing for two different wire radii of 16 $\mu$m and 8 $\mu$m (red and blue curves/dots, respectively). Added for comparison are the empty symbols, correspond to FDTD simulations with significantly reduced resolution (hence marked as "LR"). \textbf{(b)} $f_p$ as a function of wire radius $\rho_w$. }\vfill \label{fg_omegap_a}
   \end{minipage}  
 \end{figure} 
 
 %}}}
 \paragraph{Plasma frequency as a function of wire radius and unit cell size}%{{{
 From Fig.  \ref{fg_Slab_fillfraction015_wireradius_scan}, it can be also deduced that $f_p$ is approximately proportional to the logarithm of $\rho_w$ if $\rho_w \ll a$. This is related to the fact that thicker wires should have a lower self-inductance per unit length. 
-The effect of wire spacing $a$ is the opposite; with $a$ growing, the magnetic field has more space to circulate around the wir and $f_p$ reduces. 
+The effect of wire spacing $a$ is the opposite; with $a$ growing, the magnetic field has more space to circulate around the wire and $f_p$ reduces. 
 
 Different analytical models were proposed for the description of both effects. The early model by Pendry \textit{et al.} from 1996 \cite{pendry1996extremely} works well for thin wires: 
 \begin{equation} f_p(\rho_w,a) \approx \sqrt{\frac{c^2}{2\pi \, a^2 \, \ln(\frac{a}{\rho_w})}}. \label{eq_fp_pendry}\end{equation}
@@ -169,7 +169,7 @@ Its refinement by Maslovski \textit{et al.} from 2003 \cite{maslovski2002wire} s
 
 We ran two series of wire array simulations as a simple verification of the FDTD algorithm against the mentioned analytical models. In the first series plotted in Fig. \ref{fg_omegap_a}a, we kept the wire radius constant $\rho_w = 16\,\upmu$m, or and changed the wire spacing $a$ (red points). We changed the radius to $\rho_w = 8\,\upmu$m in the second batch, marked by blue points. For comparison, we plotted the plasma frequency predicted by both analytical models from Eqs. (\ref{eq_fp_maslovski}, \ref{eq_fp_pendry}) as full and dotted lines with the color corresponding to the simulation parameters, respectively. 
 
-To test the possible error introduced by the FDTD algorithm, we ran the simulation with a different resolution - results with a fine ($1$ $\upmu$m) grid are denoted by full circles, results with a coarse ($4$ $\upmu$m) grid by empty squares which are located relatively close to the respective high-resolution results.
+To test the possible error introduced by the FDTD algorithm, we ran the simulation with a different resolution - results with a fine ($1$ $\upmu$m) grid are denoted by full circles, results "LR" with a coarse ($4$ $\upmu$m) grid by empty squares which are located relatively close to the respective high-resolution results.
 
 In the second series of simulations plotted in Fig.  \ref{fg_omegap_a}b, we kept the spacing constant as $a = 100$ $\upmu$m and changed the wire radius $r$. The analytical model and FDTD simulations give similar results (within 5 \%) even for wire radii approaching roughly $a/4$. For thicker wires, the analytical model predicts higher plasma frequency than FDTD.  To conclude, the results of the model presented by Maslovski match the FDTD simulations with good accuracy for thin wires (where $r \lesssim a/5$). One possible application of the wire media is in constructing of negative-refractive-index metamaterials, where a small negative real value of the effective permittivity is desired.%%todo rewrite?
 
@@ -190,7 +190,7 @@ In the second series of simulations plotted in Fig.  \ref{fg_omegap_a}b, we kept
 \paragraph{Individual resonances}%{{{
 The low-frequency behaviour of a wire array is determined by the distributed inductance of the wires, which introduces a negative effective permittivity up to the plasma frequency $f_p$. When the wires are cut in each unit cell as shown in Fig. \ref{fg_wire_drawing}b, a three-dimensional periodic lattice of wire segments is formed. Its important parameters are not only the inductance along each antenna, but also the capacitance across the gap between wires. In a direct analogy with a series LC (coil-capacitor) circuit, such antennas exhibit \textit{individual resonances}\index{resonances!individual in cut wires} at some nonzero resonant frequency $0<f_r<f_p$ when the cut distance  $d_c$ is small compared to the unit cell size $a$. 
 
-These resonances couple to the electromagnetic field by means of their electric dipole moments, so they are denoted shortly as \textit{electric resonances}. This does not mean that no magnetic field is involved; in fact, the energy is exchanged between the resonant electric and magnetic fields during each quarter-period. The situation partially changes with decreasing the unit cell dimensions; at optical frequencies, the energy is exchanged between the electric field and the kinetic energy of the electrons, while the magnetic field circulating around the metallic particle plays a minor role only. Such regime is known as \textit{plasmonic resonances}\index{resonance!plasmonic} and was described by Mie in 1908 \cite{mie1908beitrage}.
+These resonances couple to the electromagnetic field by means of their electric dipole moments, so they are denoted shortly as \textit{electric resonances}. Still, the magnetic field is essential for the resonance; in fact, the energy is exchanged between the resonant electric and magnetic fields during each quarter-period. The situation partially changes when the unit cell dimensions decrease; at optical frequencies, the energy is exchanged between the electric field and the kinetic energy of the electrons, while the magnetic field circulating around the metallic particle plays a minor role only. Such a regime is known as \textit{plasmonic resonances}\index{resonance!plasmonic} and was described by Mie in 1908 \cite{mie1908beitrage}.
 % note the Bohren and Huffman implementation is in /home/filip/PhD/Misc/120400_analytic_Mie_scattering/
 
 The spectra of cut-wire structures for different cut distances $d_c$ are depicted in Fig. \ref{fg_CutWires_wireradius1u_cutwidth_comparison}. Starting with the thinnest wires of $\rho_w = 2$ $\upmu$m (red curves), we can identify the individual resonance at frequency close to  1200~GHz where even a single layer of unit cells reflects the whole wave amplitude and the transmittance drops to zero. Towards higher or lower frequencies from the resonance, the transmittance is relatively high.
@@ -220,7 +220,7 @@ The spectrum of a periodic structure with an individual resonance differs from t
 At some frequency below the resonance $f \lesssim f_r$, the index of refraction $\Neff'(f)$ becomes high enough to join the closest Brillouin zone boundary which was above it. From this point up to the resonant frequency $f_r$, $\Neff(f)$ has a nonzero imaginary part, and the medium exhibits a band gap.
 } 
 \item{Exactly at the resonant frequency, the interaction of the dipole with the field changes its sign, since above the resonance, the dipole starts to be oriented opposite to the driving field. 
-The real part of the refractive index $\Neff'(f)$ ceases to follow one Brillouin zone and it transitions to another Brillouin zone below it. In local media, individual resonances appear to be the only occasions for $\Neff'(f)$ to transition downwards.
+The real part of the refractive index $\Neff'(f)$ ceases to follow one Brillouin zone and it traverses to another Brillouin zone below it. In local media, individual resonances appear to be the only occasions for $\Neff'(f)$ to traverse downwards.
 
 The imaginary part of the refractive index, $\Neff''(f)$, is required by the Kramers-Kronig relations to exhibit a sharp peak at the resonant frequency, which is superposed over the broader background stemming from the band gap (see Fig. \ref{fg_CutWires_wireradius1u_cutwidth_comparison}c). 
 
@@ -232,13 +232,13 @@ The spectral width of the transition and peak is inversely proportional to the q
 
 The most important observation is that the resonance curves of $\Neff(f)$ in periodic structures are constrained between the closest two Brillouin zone boundaries, which can be understood as the "floor" and "ceiling" for the dispersion curve. Apparently a single individual resonance cannot shift the transmittance phase by more than $\pi$ per each layer of unit cells. It can therefore introduce a band of imaginary $\Neff$, but this is not sufficient for $\Neff$ to reach negative values. For this, elements with both electric and magnetic dipoles opposite to the driving field have to be combined.
 
-Another observation is that two resonances of the same type, i.e. either both with an electric dipole, or both with a magnetic dipole, cannot be combined into a single wide region of negative effective parameter. This is due to the dipole changing its sign below and above resonant frequency. Combination of multiple elements of different resonant frequencies thus leads either to multiple separate bands, or to a wide spectral region of high losses.
+Another observation is that two resonances of the same type, i.e. either both with an electric dipole, or both with a magnetic dipole, cannot be combined into a single wide region of negative effective parameter. This is due to the dipole changing its sign below and above the resonant frequency. Combination of multiple elements of different resonant frequencies thus leads either to multiple separate bands, or to a wide spectral region of high losses.
 
 %The impact of the individual resonances on the effective parameters $\eeff(f)$ and $\meff(f)$ will be discussed in a later section focused on the dielectric resonators. % TODO verify that I have done this
 
 %}}}
 \paragraph{Effects of the cut distance $d_c$}%{{{
-An increase in the cut distance $d_c$ clearly increases the resonant frequency $f_c$ (see Fig. \ref{fg_CutWires_wireradius1u_cutwidth_comparison}). The reason is twofold: for a cut width small relative to the unit cell size, $d_c\ll a$, it is mostly due to a reduced capacitive coupling between the cut wires; for a cut width comparable or greater than the unit cell size, $d_c \gtrsim a$, reduction of the cut-wire inductance is more important.
+An increase in the cut distance $d_c$ clearly increases the resonant frequency $f_c$ (see Fig. \ref{fg_CutWires_wireradius1u_cutwidth_comparison}). The reason is twofold: for a cut width small relative to the unit cell size, $d_c\ll a$, it is mostly due to a reduced capacitive coupling between the cut wires; for a cut width comparable to unit cell size, $d_c \gtrsim a$, reduction of the cut-wire inductance is more important.
 
 Both the individual and Bragg-type resonances can be identified in the plot for different $d_c$ in Fig. \ref{fg_CutWires_wireradius1u_cutwidth_comparison}c. When $d_c \sim 16$  $\upmu$m, the individual resonance shifts above 1.5~THz and exchanges its order with the Bragg band gap. 
 For $d_c \gtrsim 32$  $\upmu$m on, the individual resonances are similar to those for $d_c\sim 2$ $\upmu$m, but are shifted by one Brillouin zone up.
@@ -268,15 +268,15 @@ Although we did not fabricate any cut-wire metamaterial, we used the terahertz t
 \end{overpic}
 \end{figure}
 
-This kind of structure was designed to operate as a switch for the terahertz radiation, controlled by the current flowing along the orientation of the wires and modulating the conductivity of semiconductor transitions at the ends of each cut wire. For an unknown reason, the modulation of the terahertz signal was very weak, if any, in all of 7 supplied samples. The only observed kind of systematic modulation manifested itself as a 2.2\% drop in amplitude of the transmitted terahertz waveform, and its temporal advance by no more than 18 fs. These values required to feed the structure with a strong modulation signal, dissipating roughly 10 watt peak thermal power.
+This kind of structure was designed to operate as a switch for the terahertz radiation, controlled by the current that flows along the orientation of the wires and modulates the conductivity of semiconductor transitions at the ends of each cut wire. For an unknown reason, the modulation of the terahertz signal was very weak, if any, in all of 7 supplied samples. The only observed kind of systematic modulation manifested itself as a 2.2\% drop in amplitude of the transmitted terahertz waveform, and its temporal advance by no more than 18 fs. These values required to feed the structure with a strong modulation signal, dissipating roughly 10 watt peak thermal power.
 
-The sample presented above in Fig. \ref{fg_bousek}, though not applicable as a modulator, exhibits a clear electric resonance around 1550~GHz. This resonance is substantially broadened and weakened by the losses of the structure (red line in Fig. \ref{fg_bousekspectra}). A FDTD simulation of thin metallic stripes 30 $\upmu$m long and 6.5 $\upmu$m wide on a silicon substrate did not match the experimental spectra very well (green line in Fig. \ref{fg_bousekspectra}). 
+The sample presented above in Fig. \ref{fg_bousek}, though not applicable as a modulator, exhibits a clear electric resonance around 1550~GHz. This resonance is substantially broadened and weakened by the losses of the structure (red line in Fig. \ref{fg_bousekspectra}). A FDTD simulation of thin metallic stripes 30 $\upmu$m long and 6.5 $\upmu$m wide on a silicon substrate did not match the experimental spectra quite well (green line in Fig. \ref{fg_bousekspectra}). 
 %}}}
 \begin{figure}[ht]  % fg_bousekspectra%{{{
 	\caption[Comparison of experimental and simulated transmittance spectra of the cut-wire array]{Comparison of experimental (red line) and simulated transmittance spectra (green and blue lines) of the cut-wire array on a silicon substrate. The green line corresponds to the original geometry from Fig. \ref{fg_bousek}b; a better match with the experiment is obtained by changing the length of stripes from 30 to 40 $\mu$m (blue line).} \label{fg_bousekspectra} \centering 
 \begin{overpic}[width=.85\textwidth]{img-expe/bousek.pdf}\end{overpic}
 \end{figure}
-A much better match was obtained by simple elongation of the conductive stripes to 40 $\upmu$m (blue line in Fig. \ref{fg_bousekspectra}). This may reflect the fact that the wires were surrounded by a highly doped, conductive zones of silicon.
+A much better match was obtained by simple elongation of the conductive stripes to 40 $\upmu$m (blue line in Fig. \ref{fg_bousekspectra}). This may reflect the fact that the wires were surrounded by highly doped, conductive zones of silicon.
 Although not taking into account the dissipative losses, such a simulation correctly identifies the resonance freqeuncy of the stripes. It also, at least quantitatively, matches the asymmetric spectral shape, which is caused by the onset of diffraction into the silicon substrate at $f_c = c/(50\;$ $\upmu$m$)/N_{\text{Si}} \approx 1730$ GHz. 
 
 The presented simulations were not optimized for the dissipative losses in silicon, which could be modelled with more detailed knowledge of the structure preparation. %TODO unduplicate rewrite?
@@ -299,7 +299,7 @@ The fundamental resonance in a cut wire has an electric dipole moment only. The 
 One of the simplest examples is formed by bending a wire into a "C"-shaped \textit{split-ring resonator}\index{split-ring resonator!spectra} (SRR). To reduce the resonant frequency, capacitor pads can be added to the cut, as shown in Fig. \ref{fg_SRR_types}a. The first resonance in its spectrum has a dominant magnetic dipole moment, and will be denoted simply as the \textit{magnetic resonance}\index{resonance!individual magnetic}. The electric current flows through the wire along a circular path, while the magnetic field has a toroidal shape around the wire.   
 
 The very concept of SRR is at least as old as the Hertz's experiments with the spark-gap transmitter from 1880s.
-As described in the historical review of Ref. \cite[pp. 120--126]{solymar2009waves}, first SRR arrays were built in early 1980s with the aim to build an effective medium with highly lossy complex permeability; a decade later asymmetric SRRs were used to achieve strong bianisotropy. Many publications cite Refs. \cite{pendry1999magnetism,pendry2000negative} from Pendry et al. as the first application of SRR array for achieving negative effective permeability and index of refraction, respectively. Since then, the number of SRR-related publications has grown rapidly. 
+As described in the historical review of Ref. \cite[pp. 120--126]{solymar2009waves}, first SRR arrays were built in the early 1980s with the aim to build an effective medium with highly lossy complex permeability; a decade later asymmetric SRRs were used to achieve strong bianisotropy. Many publications cite Refs. \cite{pendry1999magnetism,pendry2000negative} from Pendry et al. as the first application of SRR array for achieving negative effective permeability and index of refraction, respectively. Since then, the number of SRR-related publications has grown rapidly. 
 \label{negn_srr}
 
 \begin{figure}[h] \caption[Drawings of the symmetric and asymmetric split-ring resonators]{Variants of the split-ring resonators, viewed from the side perpendicular to the magnetic field: \textbf{(a)} classical SRR with low symmetry, \textbf{(b)} symmetric SRR with two splits.} \label{fg_SRR_types} \centering 
@@ -763,7 +763,7 @@ An experiment involving a similar sample was published previously \cite{yakiyama
 Dielectric rods aligned parallel to the magnetic field exhibit spectra similar to the sphere arrays (see Fig. \ref{fg_rodsphere_comparison}), with clearly identifiable Mie resonances with magnetic and electric dipoles.
 Unlike sphere arrays, the computation of the rod array behaviour under near-perpendicular incidence is a two-dimensional problem. 
 
-Photonic crystals composed of dielectric rods in a square lattice have been examined thoroughly since early 1990s \cite{plihal1991two, pendry1992_transfer_matrix}. For structures intended to operate at optical or near-infrared frequencies, the permittivity of the constituent materials was usually relatively low, typically up to the permittivity of silicon $\epsrl \leq 12$. . 
+Photonic crystals composed of dielectric rods in a square lattice have been examined thoroughly since the early 1990s \cite{plihal1991two, pendry1992_transfer_matrix}. For structures intended to operate at optical or near-infrared frequencies, the permittivity of the constituent materials was usually relatively low, typically up to the permittivity of silicon $\epsrl \leq 12$. . 
 
 In the left panel of Fig. \ref{fg_rodh}, the low permittivity in the structure causes its low-frequency behaviour to be similar to the one-dimensional photonic crystal. At the lower edge of the Bragg band gap ($X1$ subplot of \ref{fg_rodh}a), the electromagnetic wave concentrates the electric field in the layer of dielectric rods, as indicated by tiny arrows. The magnetic field energy is roughly complementary, located predominantly in the air between them. As already described on the example of 1-D PhC, at the upper edge of the band the situation is opposite, with most of the magnetic-field energy localized around the dielectric. The number of nodal planes of the electric or magnetic field does not change between the lower and upper edges of a Bragg band gap.
 
@@ -1205,8 +1205,8 @@ The first photonic band is obviously accurately matched by both simulation setup
 \end{figure}
 %}}}
 \paragraph{Extraordinary transmission in fishnets} %{{{
-By adding conductive connections across the slits in the above described structure, a perforated metallic sheet is formed which is also denoted as a \textit{mesh}\index{mesh}, \textit{sub-wavelength hole array}\index{sub-wavelength hole array}, or within the context of metamaterials, as a \textit{fishnet}\index{fishnet}. Already in 1950s, an array of perforated metallic sheets was proposed to form an artificial dielectric with an index of refraction $0 < \Neff' < 1$, but the electromagnetic wave propagated parallel to the slabs \cite[p. 58]{brown1953artificial}.  % thus not exhibiting the resonant phenomena http://photonics.inescporto.pt/links/fct2013-1/metap14.pdf
-The spectral selectivity of a single metallic mesh perpendicular to the wave vector was employed in 1960s to set up a microwave and far-infrared filter \cite{ulrich1967effective,ulrich1967far, vogel1964transmission}.  
+By adding conductive connections across the slits in the above described structure, a perforated metallic sheet is formed which is also denoted as a \textit{mesh}\index{mesh}, \textit{sub-wavelength hole array}\index{sub-wavelength hole array}, or within the context of metamaterials, as a \textit{fishnet}\index{fishnet}. Already in the 1950s, an array of perforated metallic sheets was proposed to form an artificial dielectric with an index of refraction $0 < \Neff' < 1$, but the electromagnetic wave propagated parallel to the slabs \cite[p. 58]{brown1953artificial}.  % thus not exhibiting the resonant phenomena http://photonics.inescporto.pt/links/fct2013-1/metap14.pdf
+The spectral selectivity of a single metallic mesh perpendicular to the wave vector was employed in the 1960s to set up a microwave and far-infrared filter \cite{ulrich1967effective,ulrich1967far, vogel1964transmission}.  
 
 The interest in sub-wavelength hole arrays was revived when periodic patterning of a metallic surface near a sub-wavelength hole was shown  \cite{ebbesen1998extraordinary} to enable the extraordinary optical transmission which can be orders of magnitude larger than the transmission estimated from the geometrical hole dimensions. 
 %  % predicted by Bethe's law of inverse fourth power of 
