--- a/thztech.tex
+++ b/thztech.tex
@@ -1,12 +1,12 @@
 \section{Short review of the terahertz technology}
-The terahertz range of the electromagnetic spectrum, spanning roughly from 100~GHz to 10~THz, has met as yet a relatively small application potential in science and technology, compared to the development in the microwave ($<$ 100~GHz) and near-infrared ($>$ 100 THz) or optical ranges. The reason can be traced down both to the limited choice and high cost of suitable terahertz sources and detectors, and to their usually small efficiency or sensitivity, respectively. The technology and science, however, develop fast in this field, and the number of terahertz-related papers has doubled every 3.2 years \cite{lewis2014review} between 1975 and 2010.  
+The terahertz range of the electromagnetic spectrum, spanning roughly from 100~GHz to 10~THz, has met a relatively small application potential in science and technology  as yet, compared to the development in the microwave ($<$ 100~GHz) and near-infrared ($>$ 100 THz) or optical ranges. The reason can be traced down both to the limited choice and high cost of suitable terahertz sources and detectors, and to their usually small efficiency or sensitivity. The technology and science, however, develop fast in this field, and the number of terahertz-related papers has doubled every 3.2 years \cite{lewis2014review} between 1975 and 2010.  
 
 There is a great number of books and papers that describe different terahertz sources and detectors in detail \cite[pp. 155-158]{lee2008book}\cite{sullivan2012field,lewis2014review}
 and many of them are also, with more or less detail, discussed in previous doctoral theses written in our group (\cite[pp. 2-30]{pashkin2004phd}, \cite[pp. 19-25]{nemec2006phd}, \cite[pp. 7-26]{fekete2008phd}, \cite[pp. 11-21]{sibik2010dp}, \cite[pp. 31-45]{yahiaoui2011phd}, \cite[pp. 33-38]{mics2012phd}, \cite[pp. 25-33]{skoromets2013phd}, etc.).
 
-Electromagnetic waves in the terahertz range are radiated whenever charged particles are subject to a fast-enough acceleration at the picosecond scale.  The generation processes may be sorted with regard to the medium in which the emission occurs and to the origin of the force causing the acceleration.  In the following paragraphs, we try to briefly review the terahertz technology in a systematic manner.
+Electromagnetic waves in the terahertz range are radiated whenever charged particles are subject to fast-enough acceleration at the picosecond scale.  The generation processes may be sorted with regard to the medium in which the emission occurs and to the origin of the force causing the acceleration.  In the following paragraphs, we try to review the terahertz technology in a systematic manner.
 
-Firstly, let us remind why thermal sources are rarely used in the THz range, although they are widely used at higher frequencies. The black body radiation is governed by the Planck law \cite[p. 23]{klingshirn2007semiconductor}
+Although they are widely used at higher frequencies, thermal sources are rarely used in the THz range. The black body radiation is governed by the Planck law \cite[p. 23]{klingshirn2007semiconductor}
 \begin{equation}I(f, T) = \frac{2 h}{\pi^2 c^2}\frac{f^3}{e^{\frac{h f}{kT}}-1} \mathrm{\,W\,sr^{-1}\,Hz^{-1}\,m^{-2}}, \label{eq_planck}\end{equation}
 from which it follows that the luminosity $I$ in the terahertz range is always very small: Integrating over frequencies from 300~GHz to 3~THz, one obtains roughly 0.6 W sr$^{-1}$ m$^{-2}$ at the room temperature ($T=$ 300~K).  Furthermore, all Planck oscillators at the frequency of e.g. $f =$ 1~THz are already fully saturated:
 %  although the thermal energy at room temperature $T$ is significantly higher than the photon energy $hf$ at 1 THz
@@ -70,7 +70,7 @@ to have their electrooptic coefficients  two orders of magnitude higher than the
 Nonlinear interactions in semiconductors are enhanced when the incident photon energy is above their band gap. Common crystals used for \textit{resonant THz emission} are GaAs, %[CCap22] 
 InP  or CdTe (with band-gaps of 1.42, 1.34 and 1.5 eV, respectively), which can be illuminated by a titanium-sapphire laser (with an average photon energy $hc/\lambda \approx$ 1.5 eV).} 
 \item{With a proper spatio-temporal optical pulse geometry and choice of materials, THz pulses can be generated  in the form of Čerenkov cone  \cite{auston1984cherenkov} even if the optical group velocity is higher than the terahertz one.}
-\item{Finally, plasma generated in gases by high optical intensity of optical pulses can serve as a nonlinear medium, with a low dispersion and thus a very broad bandwith of tens of THz \cite{loffler2000generation,chen2007terahertz,tong2012}. }
+\item{Finally, plasma generated in gases by high optical intensity of optical pulses can serve as a nonlinear medium, with low dispersion and thus a very broad bandwith of tens of THz \cite{loffler2000generation,chen2007terahertz,tong2012}. }
  \end{itemize}
 %% TODO Sub-cycle control of terahertz high-harmonic generation by dynamical Bloch oscillations
 %% TODO and also http://www.nature.com/srep/2014/140605/srep05045/full/srep05045.html#close
@@ -105,7 +105,7 @@ Quantum cascade lasers (QCL) are composed of hundreds of semiconductor layers \c
 \paragraph{Other THz sources}%{{{ ================================================================================
 Although a complete list of all physical phenomena that lead to possibly useful emission of terahertz waves is beyond the scope of this thesis, we try to point out some most notable examples of these. 
 
-Earlier in our laboratory it was observed that an oblique impact of femtosecond optical pulse on 50-150 nm thick gold layer on glass emits a THz pulse of similar energy as those from an interdigitated emitter \cite{kadlec2004optical,kadlec2005study}. Other experiments, e.g. with thin organic layers \cite{ramakrishnan2012surface}, suggest the process may be intensified by surface plasmons.
+Earlier in our laboratory it was observed that an oblique impact of femtosecond optical pulse on a 50-150~nm thick gold layer on glass emits a THz pulse of similar energy as those from an interdigitated emitter \cite{kadlec2004optical,kadlec2005study}. Other experiments, e.g. with thin organic layers \cite{ramakrishnan2012surface}, suggest the process may be intensified by surface plasmons.
 
 Tunable terahertz continuous-wave emission was observed in multiple stacked Josephson junctions \cite{ozyuzer2007emission}, where the oscillation frequency is determined by the junction voltage $f(U) = 2e/h$, thus 2 mV correspond to roughly 1 THz. This method however requires cryogenic temperatures as a superconductor structure is used, and is still subject to primary research.
 
@@ -117,22 +117,22 @@ The \textit{Smith-Purcell} effect is observed when a relativistic electron beam 
 \subsection{Terahertz detectors}
 \paragraph{Thermal detection}%{{{
 A broad class of detectors, applicable also to the terahertz range, measure the energy of the radiation. 
-Classical bolometers use thermistors or thermocouples whose resistivity will change when they are heated by radiation.
-Pyroelectric detectors convert the heat directly to the electric signal by means of a crystal that changes its polarisation with temperature. In the Golay cells, an incident terahertz pulse heats the air, whose thermal expansion is detected. Such devices usually operate at room temperature.
+Classical bolometers use thermistors or thermocouples, resistivity of which will change when they are heated by radiation.
+Pyroelectric detectors convert the heat directly to the electric signal by means of a crystal that changes its polarisation with temperature. In the Golay cells, an incident terahertz pulse heats the air and its thermal expansion is detected. Such devices usually operate at room temperature.
 
 The concept of a bolometer can be greatly improved, in terms of sensitivity or speed, at cryogenic temperatures when a superconductor near its critical temperature or a doped semiconductor are used as the temperature detector. In the \textit{hot-electron} bolometers, the superconductor forms a narrow bridge between two contacts so that the changes in resistance are more pronounced. The changes in the superconductor behaviour can also be detected by a superconducting quantum interference device (SQUID).  
 
 %}}}
 \paragraph{Heterodyne mixing}%{{{
-A continuous-wave terahertz signal can be mixed with the signal from a local oscillator, producing a difference frequency in the microwave spectral range which can be easily processed using an oscilloscope or a spectral analyzer. The nonlinear components often used up to 1 THz are Schottky diodes or superconducting Josephson junctions \cite{face1986high}.
-Fast enough thermal detectors, such as hot-electron bolometers based on Nb or NbN superconducting transition, can also be used, offering a higher sensitivity \cite{lee2008book}.
+A continuous-wave terahertz signal can be mixed with the signal from a local terahertz oscillator, producing a difference frequency in the microwave spectral range which can be processed easily using an oscilloscope or a spectral analyzer. The nonlinear components often used up to 1 THz are Schottky diodes or superconducting Josephson junctions \cite{face1986high}.
+Fast enough thermal detectors, such as hot-electron bolometers based on Nb or NbN superconducting transition, can also be used, offering higher sensitivity \cite{lee2008book}.
 
 %}}}
 \paragraph{Time-resolved field sampling}%{{{
-Another class of terahertz detectors enable measuring the electric field $\E(t)$, or magnetic field $\HH(t)$, as a function of time. An important advantage of such devices is the possibility to recover the instantaneous amplitude of the field i.e. both its modulus and phase in the frequency domain). It also allows to synchronize the detection with the pulsed source to record short terahertz transients. It should be noted that the measurement of the transmittance phase can be accomplished with continous tunable source, too, using a Mach-Zender interferometer.
+Another class of terahertz detectors enables measuring the electric field $\E(t)$, or magnetic field $\HH(t)$, as a function of time. An important advantage of such devices is the possibility to recover the instantaneous amplitude of the field, i.e., both its modulus and phase in the frequency domain). It also allows to synchronize the detection with the pulsed source to record short terahertz transients. It should be noted that the measurement of the transmittance phase can be accomplished with a continuous tunable source, too, using a Mach-Zender interferometer.
 Pulsed measurement is however vital for transient dynamics investigation.
 
-Most of such detectors require a simultaneous incidence of the terahertz pulse and a \textit{sampling} (or, \textit{gating}) optical pulse. The mutual timing of the pulses can be scanned using an optical delay line, thus the terahertz waveform can be recovered over repeated measurements \cite{wu1996ultrafast}.  % ist it appropriate?
+Most of such detectors require a simultaneous incidence of the terahertz pulse and of a \textit{sampling} (or, \textit{gating}) optical pulse. The mutual timing of the pulses can be scanned using an optical delay line, thus the terahertz waveform can be recovered over repeated measurements \cite{wu1996ultrafast}.  % ist it appropriate?
 Alternatively, various single-shot detection schemes have been also implemented, usually being based on the temporal dilation (chirp) of the sampling optical pulse and subsequent spectral analysis of the output.
 % TODO check the THz detectors as I proposed
 % HN: In the other configuration the ellipticity is measured near the zero-transmission point (Fig. 1.3b) [hn54]
